# mtgplots

./: README.md  pyproject.toml
src/mtgplots/: __init__.py
src/mtgplots/styles/: mtg.mplstyle
